style what we do section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </section>
 
         <!--"What We Do" Section-->
-        <section id="what-we-do">
+        <section id="what-we-do" class="intro">
             <h2>What We Do</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores hic suscipit soluta dolorum modi nobis nisi numquam veniam, maxime ex doloribus explicabo culpa, nam a magni. Commodi tempore assumenda non!
             </p>
