--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
         </section>
         
         <!--"Reach Out" Section-->
-        <section>
-            <h2>Reach Out</h2>
-            <div class="contact-info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.1201948077332!2d-78.8338928!3d35.6494102!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89ac8fbb15c73d9b%3A0x77277226668fe24c!2sPace%20Yourself%20Run%20Company!5e0!3m2!1sen!2sus!4v1633494274845!5m2!1sen!2sus" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
+        <section id="reach-out" class="contact-info">
+            <h2 class="section-title secondary-border">Reach Out</h2>
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.1201948077332!2d-78.8338928!3d35.6494102!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89ac8fbb15c73d9b%3A0x77277226668fe24c!2sPace%20Yourself%20Run%20Company!5e0!3m2!1sen!2sus!4v1633494274845!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy">
                 </iframe>
             </div>
             <div>
