--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <title>Privacy Policy - Run Buddy</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/secondary-styles.css"/>
   </head>
+  
   <body>
       <!--navigation-->
       <Header>
         <h1>
-            <a href="/">RUN BUDDY</a>
+            <a href="./index.html">RUN BUDDY</a>
         </h1>
         
         <nav>
