--- a/index.html
+++ b/index.html
@@ -75,10 +75,14 @@
 
     <!--"What We Do" Section-->
     <section id="what-we-do" class="intro">
-        <h2 class="section-title primary-border">What We Do</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores hic suscipit soluta dolorum modi nobis nisi
-            numquam veniam, maxime ex doloribus explicabo culpa, nam a magni. Commodi tempore assumenda non!
-        </p>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">What We Do</h2>
+        </div>
+        <div class="flex-row">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores hic suscipit soluta dolorum modi nobis nisi
+           numquam veniam, maxime ex doloribus explicabo culpa, nam a magni. Commodi tempore assumenda non!
+            </p>
+        </div>
     </section>
 
     <!--"What You Do" Section-->
