--- a/index.html
+++ b/index.html
@@ -87,14 +87,23 @@
 
     <!--"What You Do" Section-->
     <section id="what-you-do" class="steps">
-        <h2 class="section-title secondary-border">What You Do</h2>
-
-        <div>
-            <img src="./assets/images/01-04-svgs/step-1.svg" alt="" />
-            <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
-            <p>You're already here, so why not?</p>
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">What You Do</h2>
         </div>
 
+        <div class="step">
+            <h3>Step 1.</h3>
+            <div class="step-info">
+                <div class="step-img">
+                    <img src="./assets/images/01-04-svgs/step-1.svg" alt="" />
+                </div>
+                <div class="step-text">
+                    <h4>Fill Out the Form Above.</h4>
+                    <p>You're already here, so why not?</p>
+                </div>
+            </div>
+        </div>
+        
         <div>
             <img src="./assets/images/01-04-svgs/step-2.svg" alt="" />
             <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
@@ -116,7 +125,10 @@
 
     <!--"Meet The Trainers" Section-->
     <section id="your-trainers" class="trainers">
-        <h2 class="section-title primary-border">Meet The Trainers</h2>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+        </div>
+
         <article class="trainer">
             <img src="./assets/images/01-05-trainers/trainer-1.jpg"
                 alt="Arron Stephens in his workout clothes, ready to pump iron" />
@@ -159,7 +171,10 @@
 
     <!--"Reach Out" Section-->
     <section id="reach-out" class="contact">
-        <h2 class="section-title secondary-border">Reach Out</h2>
+        <div>
+            <h2 class="section-title secondary-border">Reach Out</h2>
+        </div>
+
         <div class="contact-info">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.1201948077332!2d-78.8338928!3d35.6494102!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89ac8fbb15c73d9b%3A0x77277226668fe24c!2sPace%20Yourself%20Run%20Company!5e0!3m2!1sen!2sus!4v1633494274845!5m2!1sen!2sus"
