--- a/index.html
+++ b/index.html
@@ -146,49 +146,53 @@
     </section>
 
     <!--"Meet The Trainers" Section-->
-    <section id="your-trainers" class="trainers">
+    <section id="your-trainers">
         <div class="flex-row">
             <h2 class="section-title primary-border">Meet The Trainers</h2>
         </div>
 
-        <article class="trainer">
-            <img src="./assets/images/01-05-trainers/trainer-1.jpg"
-                alt="Arron Stephens in his workout clothes, ready to pump iron" />
-            <div class="trainer-bio text-left">
-                <h3>Arron Stephens</h3>
-                <h4>Speed / Strength</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quam maiores aperiam numquam
-                    magni. Maxime asperiores quibusdam sit animi, labore quis nam, voluptas fuga soluta porro ex quo
-                    saepe sapiente.
-                </p>
-            </div>
-        </article>
-        <!--second trainer bio-->
-        <article class="trainer">
-            <div class="trainer-bio text-right">
-                <h3>Joanna Gill</h3>
-                <h4>Endurance</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat quisquam iusto amet necessitatibus,
-                    quia enim in qui molestiae, perspiciatis sequi illo voluptatum atque nihil exercitationem voluptatem
-                    modi, quaerat nam ratione.
-                </p>
-            </div>
-            <img src="./assets/images/01-05-trainers/trainer-2.jpg"
-                alt="Joanna Gill in her workout clothes, ready for cardio" />
-        </article>
-        <!--Third trainer bio-->
-        <article class="trainer">
-            <img src="./assets/images/01-05-trainers/trainer-3.jpg"
-                alt="Harry the Headband Smith in workout clothes, lifting pink weights" />
-            <div class="trainer-bio text-left">
-                <h3>Harry "The Headband" Smith</h3>
-                <h4>Strength</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio soluta ad magni enim earum,
-                    omnis totam odit fugiat sed doloremque assumenda tempora eaque ipsum delectus iusto voluptate
-                    dolores similique consequuntur.
-                </p>
-            </div>
-        </article>
+        <div class="trainers">
+            <article class="trainer">
+                <img src="./assets/images/01-05-trainers/trainer-1.jpg"
+                    alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Arron Stephens</h3>
+                    <h4 class="trainer-role">Speed / Strength</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quam maiores aperiam numquam
+                        magni. Maxime asperiores quibusdam sit animi, labore quis nam, voluptas fuga soluta porro ex quo
+                        saepe sapiente.
+                    </p>
+                </div>
+            </article>
+
+            <!--second trainer bio-->
+            <article class="trainer">
+                <img src="./assets/images/01-05-trainers/trainer-2.jpg"
+                    alt="Joanna Gill in her workout clothes, ready for cardio" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Joanna Gill</h3>
+                    <h4 class="trainer-role">Endurance</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat quisquam iusto amet necessitatibus,
+                        quia enim in qui molestiae, perspiciatis sequi illo voluptatum atque nihil exercitationem voluptatem
+                        modi, quaerat nam ratione.
+                    </p>
+                </div>
+            </article>
+
+            <!--Third trainer bio-->
+            <article class="trainer">
+                <img src="./assets/images/01-05-trainers/trainer-3.jpg"
+                    alt="Harry the Headband Smith in workout clothes, lifting pink weights" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Harry "The Headband" Smith</h3>
+                    <h4 class="trainer-role">Strength</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio soluta ad magni enim earum,
+                        omnis totam odit fugiat sed doloremque assumenda tempora eaque ipsum delectus iusto voluptate
+                        dolores similique consequuntur.
+                    </p>
+                </div>
+            </article>
+        </div>
     </section>
 
     <!--"Reach Out" Section-->
